tests/routes/tokens/snapshots/integration__routes__tokens__post__post-2.snap
---
source: tests/routes/tokens/post.rs
expression: response.json()
---
{
  "created_at": "[datetime]",
  "expires_at": null,
  "id": 1,
  "key_id": "[key_id]",
  "last_used_at": "[datetime]",
  "name": "cool token",
  "plaintoken": "[plaintoken]"
}
