tests/routes/tokens/snapshots/integration__routes__tokens__post__post-4.snap
---
source: tests/routes/tokens/post.rs
expression: json_b
---
{
  "created_at": "[datetime]",
  "expires_at": "[datetime]",
  "id": 2,
  "key_id": "[key_id]",
  "last_used_at": "[datetime]",
  "name": "cool token",
  "plaintoken": "[plaintoken]"
}
